--- a/views/details.hbs
+++ b/views/details.hbs
@@ -1,5 +1,5 @@
 <!-- ======= Details Section ======= -->
-<section id="portfolio-details" class="portfolio-details">
+<section id="portfolio-details" class="portfolio-details" data-aos="fade-up">
     <div class="container">
 
         <div class="row gy-4">
