--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,19 +13,19 @@
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="ri-store-line"></i>
-                    <h3><a href="">Lorem Ipsum</a></h3>
+                    <h3><a href="/catalog">All Accommodation</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="ri-bar-chart-box-line"></i>
-                    <h3><a href="">Dolor Sitema</a></h3>
+                    <h3><a href="/about">About BooKing</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="ri-calendar-todo-line"></i>
-                    <h3><a href="">Sedare Perspiciatis</a></h3>
+                    <h3><a href="#">Sedare Perspiciatis</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
