--- a/views/about.hbs
+++ b/views/about.hbs
@@ -39,7 +39,7 @@
 
             </div>
 
-            <div class="col-lg-8 mt-5 mt-lg-0">
+            <div class="col-lg-8 mt-5 mt-lg-0 m-auto">
 
                 <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                     <div class="row">
