--- a/views/partials/roomCard.hbs
+++ b/views/partials/roomCard.hbs
@@ -1,12 +1,14 @@
 <div class="col-lg-4 col-md-6 portfolio-item">
     <div class="portfolio-wrap">
+
         <img src="{{imageUrl}}" class="img-fluid" alt="{{name}}">
+
         <div class="portfolio-info">
             <h3 class="text-warning">{{name}}</h3>
             <h4 class="text-white opacity-75">{{city}}</h4>
             <h5 class="text-white fw-bold">{{price}}€</h5>
             <div class="portfolio-links">
-                <a href="#" title="More Details"><i class="bx bxs-info-circle bx-sm"></i> More details</a>
+                <a href="/catalog/{{id}}" title="More Details"><i class="bx bxs-info-circle bx-sm"></i> More details</a>
             </div>
         </div>
     </div>
