--- a/views/404.hbs
+++ b/views/404.hbs
@@ -1,2 +1,3 @@
-<h1>404 Not Found</h1>
-<h3>The page you are looking for doesn't exist!</h3>
+<h1 class="text-danger text-center"><i class="bx bx-confused"></i></h1>
+<h2 class="text-black text-center">Ooops, error 404</h2>
+<h3 class="text-black-50 text-center">The page you are looking for doesn't exist!</h3>
