--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,4 +1,3 @@
-
 <!-- ======= Create Section ======= -->
 <section id="contact" class="contact">
     <div class="container" data-aos="fade-up">
@@ -9,33 +8,43 @@
         </div>
 
         <div class="row mt-5">
-            <div class="col-lg-8 mt-2 mt-lg-0">
+            <div class="col-lg-10 mt-2 mt-lg-0 m-auto">
 
-                <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <form action="/create" method="post" role="form" class="create-form">
                     <div class="row">
                         <div class="col-md-6 form-group">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                                required>
+                            <input type="text" name="name" class="form-control" id="name"
+                                placeholder="Accommodation Name" required>
                         </div>
                         <div class="col-md-6 form-group mt-3 mt-md-0">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                                required>
+                            <input type="text" class="form-control" name="city" id="city"
+                                placeholder="City / Location / Address" required>
                         </div>
                     </div>
                     <div class="form-group mt-3">
-                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                            required>
+                        <input type="text" class="form-control" name="imageUrl" id="imageUrl"
+                            placeholder="Cover Image Url" required>
                     </div>
                     <div class="form-group mt-3">
-                        <textarea class="form-control" name="message" rows="5" placeholder="Message"
-                            required></textarea>
+                        <div class="input-group">
+                            <input type="text" class="form-control" name="gallery" id="gallery1"
+                                placeholder="First Gallery Image Url" title="This field is optional" />
+                            <input type="text" class="form-control" name="gallery" id="gallery2"
+                                placeholder="Second Gallery Image Url" title="This field is optional" />
+                            <input type="text" class="form-control" name="gallery" id="gallery3"
+                                placeholder="Third Gallery Image Url" title="This field is optional" />
+                        </div>
+                    </div>
+                    <div class="form-group mt-3">
+                        <textarea class="form-control" name="description" rows="6"
+                            placeholder="Add an attractive description to your place..." required></textarea>
                     </div>
                     <div class="my-3">
                         <div class="loading">Loading</div>
                         <div class="error-message"></div>
-                        <div class="sent-message">Your message has been sent. Thank you!</div>
+                        <div class="sent-message">New accommodation has been added. Thank you!</div>
                     </div>
-                    <div class="text-center"><button type="submit">Send Message</button></div>
+                    <div class="text-center"><button type="submit">Save</button></div>
                 </form>
 
             </div>
