--- a/views/details.hbs
+++ b/views/details.hbs
@@ -6,38 +6,24 @@
 
             <div class="col-lg-8">
                 <div class="portfolio-details-slider swiper">
-                    <div class="swiper-wrapper align-items-center">
-
-                        <div class="swiper-slide">
-                            <img src="/static/img/portfolio/portfolio-2.jpg" alt="">
-                        </div>
-
-                        <div class="swiper-slide">
-                            <img src="/static/img/portfolio/portfolio-3.jpg" alt="">
-                        </div>
-
-                    </div>
+                    {{> roomGallery }}
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
 
             <div class="col-lg-4">
                 <div class="portfolio-info">
-                    <h3>Project information</h3>
+                    <h3>Room facilities</h3>
                     <ul>
-                        <li><strong>Category</strong>: Web design</li>
-                        <li><strong>Client</strong>: ASU Company</li>
-                        <li><strong>Project date</strong>: 01 March, 2020</li>
-                        <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                        {{#each room.facilities}}
+                            <li><i class="bx bx-check-circle me-2 text-success"></i> {{this}}</li>
+                        {{/each}}
                     </ul>
                 </div>
                 <div class="portfolio-description">
-                    <h2>This is an example of portfolio detail</h2>
+                    <h2>Here you will find</h2>
                     <p>
-                        Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia
-                        quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim.
-                        Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla
-                        at esse enim cum deserunt eius.
+                        {{room.description}}
                     </p>
                 </div>
             </div>
