--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,28 +4,29 @@
 
         <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
             <div class="col-xl-6 col-lg-8">
-                <h1>BooKing Accommodation<span></span></h1>
-                <h2>Find your perfect real estate now!</h2>
+                <h1><span>BooKing Accommodation</span></h1>
+                <h2><span class=" text-xl-center">Planning a trip?</span></h2>
+                <h3 class="text-white-50">Find the perfect place to stay right away!</h3>
             </div>
         </div>
 
         <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
-                    <i class="ri-store-line"></i>
+                    <i class="bx bx-purchase-tag-alt"></i>
                     <h3><a href="/catalog">All Accommodation</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
-                    <i class="ri-bar-chart-box-line"></i>
+                    <i class="ri-building-fill"></i>
                     <h3><a href="/about">About BooKing</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
-                    <i class="ri-calendar-todo-line"></i>
-                    <h3><a href="#">Sedare Perspiciatis</a></h3>
+                    <i class=" ri-add-box-fill"></i>
+                    <h3><a href="/create">Host Accommodation</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
