--- a/views/partials/roomCard.hbs
+++ b/views/partials/roomCard.hbs
@@ -2,9 +2,9 @@
     <div class="portfolio-wrap">
 
         <img src="{{imageUrl}}" class="img-fluid" alt="{{name}}">
-
+        
+        
         <div class="portfolio-info">
-            <h3 class="text-warning">{{name}}</h3>
             <h4 class="text-white opacity-75">{{city}}</h4>
             <h5 class="text-white fw-bold">{{price}}€</h5>
             <div class="portfolio-links">
@@ -12,4 +12,5 @@
             </div>
         </div>
     </div>
+    <h3 class="title">{{name}}</h3>
 </div>
