Migrate app to use mongodb

--- a/views/partials/roomCard.hbs
+++ b/views/partials/roomCard.hbs
@@ -8,7 +8,7 @@
             <h4 class="text-white opacity-75">{{city}}</h4>
             <h5 class="text-white fw-bold">{{price}}€</h5>
             <div class="portfolio-links">
-                <a href="/catalog/{{id}}" title="More Details"><i class="bx bxs-info-circle bx-sm"></i> More details</a>
+                <a href="/catalog/{{_id}}" title="More Details"><i class="bx bxs-info-circle bx-sm"></i> More details</a>
             </div>
         </div>
     </div>
