--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,7 +32,7 @@
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="ri-paint-brush-line"></i>
-                    <h3><a href="">Magni Dolores</a></h3>
+                    <h3><a href="/facility/create">Create New Facility</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
