--- a/views/details.hbs
+++ b/views/details.hbs
@@ -1,7 +1,10 @@
 <!-- ======= Details Section ======= -->
 <section id="portfolio-details" class="portfolio-details" data-aos="fade-up">
     <div class="container">
-
+        <div class="section-title">
+            <h2>Details</h2>
+            <p>{{room.name}}</p>
+        </div>
         <div class="row gy-4">
 
             <div class="col-lg-8">
@@ -14,21 +17,30 @@
             <div class="col-lg-4">
                 <div class="portfolio-info">
                     <h3>Room facilities</h3>
-                    <ul>
-                        {{#each roomFacilities}}
-                            <li><i class="bx bx-check-circle me-2 text-success"></i> {{this}}</li>
-                        {{/each}}
-                    </ul>
-                </div>
-<div class="testimonials">
- <div class="testimonial-item"> <span class="label">Price per Night: <strong class="text-info price"> {{room.price}} €</strong></span>
-</div></div>
+                    <!-- <ul>
+                        {{#each room.facilities}}
+                            <li><i class="bx bx-check-circle me-2 text-success"></i> {{label}} {{iconUrl}}</li>
+                        {{/each}} 
+                       
+                    </ul> -->
+                    <div class="testimonials">
+                        <div class="testimonial-item">
+                            <span class="label">Price per Night: <strong class="text-info price">
+                                    {{room.price}} €</strong></span>
+                        </div>
+                    </div>
 
-                <div class="portfolio-description">
-                    <h2>Here you will find</h2>
-                    <p>
-                        {{room.description}}
-                    </p>
+                    <h3 class="mt-4">Here you will find</h3>
+                    <div class="portfolio-description">
+                        <p>
+                            {{room.description}}
+                        </p>
+                    </div>
+
+                    <div class="d-flex justify-content-center">
+                        <a class="mt-3 btn btn-outline-warning text-dark"
+                            href="/facility/{{room._id}}/decorate-room">Decorate Room</a>
+                    </div>
                 </div>
             </div>
 
