--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -45,13 +45,14 @@
 
       <h1 class="logo me-auto me-lg-0"><a href="/">BooKing<span></span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!--<a href="/" class="logo me-auto me-lg-0"><img src="/static/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto " href="/">Home</a></li>
+          <li><a class="nav-link scrollto" href="/">Home</a></li>
           <li><a class="nav-link" href="/catalog">All Accomodation</a></li>
           <li><a class="nav-link" href="/create">Create Accommodation</a></li>
+          <li><a class="nav-link" href="/facility/create">Create Facility</a></li>
           <li><a class="nav-link" href="/about">About Us</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
