--- a/views/decorateRoom.hbs
+++ b/views/decorateRoom.hbs
@@ -6,18 +6,16 @@
             <p>{{room.name}}</p>
         </div>
         <div class="row d-flex align-items-around justify-content-center bg-light">
-
             <div class="col-lg-7 pt-3 m-auto">
-
                 <div class="portfolio-details-slider swiper-3d swiper">
                     {{> roomGallery }}
                     <div class="swiper-pagination"></div>
                 </div>
-
             </div>
-            <div class="col-lg-5  pt-3 m-auto">
 
-                <form method="post" class="create-form d-flex flex-column">
+            <div class="col-lg-5  pt-3 m-auto">
+                <form action="/facility/{{room._id}}/decorate-room" method="post"
+                    class="create-form d-flex flex-column">
                     <div class="portfolio-info pt-4">
                         <h3>Available facilities</h3>
 
@@ -28,24 +26,19 @@
                                     class="w-50 border border-1 border-dark-subtle pt-3 pb-0 justify-content-around align-items-center d-flex flex-wrap flex-column">
                                     <img width="28" src={{iconUrl}}>
                                     <span class="d-flex text-black-50 text-wrap">{{label}}</span>
-                                    <input type="checkbox" name="facilities" class="d-flex flex-wrap flex-column  p-0"
-                                        value="{{_id}}">
+                                    <input type="checkbox" name="{{_id}}" class="d-flex flex-wrap flex-column  p-0">
                                 </label>
                             {{/each}}
                         </fieldset>
                         <div class="d-flex mt-3 btn-group flex-wrap justify-content-center">
-                            <button type="submit" class="col-2 btn btn-warning p-2 text-dark">
-                                Save
-                            </button>
-                            <a href="/catalog/{{room._id}}" class="col-2 p-2 btn btn-outline-warning text-dark">
-                                Back To Details
-                            </a>
+                            <button type="submit" class="col-2 btn btn-warning p-2 text-dark">Save</button>
+                            <a href="/catalog/{{room._id}}" class="col-2 p-2 btn btn-outline-warning text-dark">Back To
+                                Details</a>
                         </div>
                     </div>
-                    
                 </form>
-
             </div>
 
         </div>
-</section><!-- End Decorate Section -->
+</section>
+<!-- End Decorate Section -->
