Displaying currently checked facilities for room on decorate room page

--- a/views/decorateRoom.hbs
+++ b/views/decorateRoom.hbs
@@ -26,7 +26,7 @@
                                     class="w-50 border border-1 border-dark-subtle pt-3 pb-0 justify-content-around align-items-center d-flex flex-wrap flex-column">
                                     <img width="28" src={{iconUrl}}>
                                     <span class="d-flex text-black-50 text-wrap">{{label}}</span>
-                                    <input type="checkbox" name="{{_id}}" class="d-flex flex-wrap flex-column  p-0">
+                                    <input type="checkbox" name="{{_id}}" class="d-flex flex-wrap flex-column  p-0" {{isChecked}}>
                                 </label>
                             {{/each}}
                         </fieldset>
