Add index to user model

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -23,24 +23,21 @@
                     <h3><a href="/about">About BooKing</a></h3>
                 </div>
             </div>
-            <div class="col-xl-2 col-md-4">
-                <div class="icon-box">
-                    <i class=" ri-add-box-fill"></i>
-                    <h3><a href="/create">Host Accommodation</a></h3>
+            {{#if hasUser}}
+                <div class="col-xl-2 col-md-4">
+                    <div class="icon-box">
+                        <i class=" ri-add-box-fill"></i>
+                        <h3><a href="/create">Host Accommodation</a></h3>
+                    </div>
                 </div>
-            </div>
-            <div class="col-xl-2 col-md-4">
-                <div class="icon-box">
-                    <i class="ri-paint-brush-line"></i>
-                    <h3><a href="/facility/create">Create New Facility</a></h3>
+                <div class="col-xl-2 col-md-4">
+                    <div class="icon-box">
+                        <i class="ri-paint-brush-line"></i>
+                        <h3><a href="/facility/create">Create New Facility</a></h3>
+                    </div>
                 </div>
-            </div>
-            <div class="col-xl-2 col-md-4">
-                <div class="icon-box">
-                    <i class="ri-database-2-line"></i>
-                    <h3><a href="">Nemos Enimade</a></h3>
-                </div>
-            </div>
+            {{/if}}
         </div>
 
     </div>
+</section>
