--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -45,9 +45,17 @@
           <ul>
             <li><a class="nav-link scrollto" href="/">Home</a></li>
             <li><a class="nav-link" href="/catalog">All Accommodation</a></li>
-            <li><a class="nav-link" href="/create">Create Accommodation</a></li>
-            <li><a class="nav-link" href="/facility/create">Create Facility</a></li>
             <li><a class="nav-link" href="/about">About Us</a></li>
+            {{#if hasUser}}
+              <li><a class="nav-link" href="/create">Create Accommodation</a></li>
+              <li><a class="nav-link" href="/facility/create">Create Facility</a></li>
+              <li><a class="nav-link" href="/auth/logout">Logout</a></li>
+            {{else}}
+              <li><a class="nav-link" href="/auth/login">Login</a></li>
+              <li><a class="nav-link" href="/auth/register">Register</a></li>
+            {{/if}}
+
+
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
