--- a/views/createFacility.hbs
+++ b/views/createFacility.hbs
@@ -7,7 +7,7 @@
         </div>
         <div class="row mt-1">
             <div class="col-lg-10 col-sm-auto mt-2 mt-lg-0 m-auto d-flex">
-                <form action="/facility/create" method="post" class="create-form">
+                <form action="/facility/create" name="submitForm" method="post" class="create-form">
                     <div class="my-3">
                         {{#if error}}
                             {{#each error}}
