--- a/views/register.hbs
+++ b/views/register.hbs
@@ -2,12 +2,12 @@
 <section id="contact" class="contact">
     <div class="container" data-aos="fade-up">
         <div class="section-title">
-            <h2>Login</h2>
-            <p>To Your Account</p>
+            <h2>Register</h2>
+            <p>Your Account</p>
         </div>
         <div class="row mt-1">
             <div class=" mt-2 mt-lg-0 m-auto d-flex">
-                <form action="/auth/login" method="post" name="submitForm" class="create-form">
+                <form action="/auth/register" name="submitForm" method="post" class="create-form">
                     <div class="my-3">
                         {{#if error}}
                             {{#each error}}
@@ -18,23 +18,27 @@
 
                     <div class="row m-auto col-lg-8 col-auto mt-3 mb-3 form-group">
                         <div class="input-group mt-2 mb-2">
-                            <label class="input-group-text col-md-2 col-lg-2 col-sm-3" for="username">Username</label>
-                            <input type="text" name="username" class="form-control" id="username"
-                                placeholder="Username goes here" />
+                            <label class="input-group-text col-md-3 col-lg-3 col-sm-3" for="username">Username</label>
+                            <input type="text" name="username" class="form-control" id="username" placeholder="Username goes here" />
                         </div>
                         <div class="input-group mt-2 mb-2">
-                            <label class="input-group-text col-md-2 col-lg-2 col-sm-3" for="password">Password</label>
+                            <label class="input-group-text col-md-3 col-lg-3 col-sm-3" for="password">Password</label>
                             <input type="password" class="form-control" name="password" id="password"
                                 placeholder="* * * * *" />
                         </div>
                         <div class="input-group mt-2 mb-2">
-                            <p class="pe-2 ps-2 text-black-50">Don't have an account yet? <a href="/auth/register"
-                                    class="d-inline pe-2 ps-2 nav-link rounded-1 bg-warning text-secondary bg-opacity-25">Click here</a></p>
+                            <label class="input-group-text col-md-3 col-lg-3 col-sm-3" for="password">Repeat Password</label>
+                            <input type="password" class="form-control" name="repeatPassword" id="repeatPassword"
+                                placeholder="* * * * *" />
+                        </div>
+
+                        <div class="input-group mt-2 mb-2">
+                            <p class="pe-2 ps-2 text-black-50">Already have an account? <a href="/auth/login" class="d-inline pe-2 ps-2 nav-link rounded-1 bg-warning text-secondary bg-opacity-25">Click here</a></p>
                         </div>
                     </div>
 
                     <div class="row mt-3 mb-3 form-group">
-                        <div class="text-center"><button type="submit">Login</button></div>
+                        <div class="text-center"><button type="submit">Register</button></div>
                     </div>
                 </form>
             </div>
