--- a/views/details.hbs
+++ b/views/details.hbs
@@ -15,17 +15,17 @@
             </div>
 
             <div class="col-lg-4">
-                <div class="portfolio-info">                  
-                        <h3>Room facilities</h3>
-                        <ul class="d-flex justify-content-center align-items-end flex-wrap gap-1">
-                            {{#each room.facilities}}
-                                <li class="d-flex flex-column justify-content-around align-items-center 
+                <div class="portfolio-info">
+                    <h3>Room facilities</h3>
+                    <ul class="d-flex justify-content-center align-items-end flex-wrap gap-1">
+                        {{#each room.facilities}}
+                            <li class="d-flex flex-column justify-content-around align-items-center 
                                     p-2 border-bottom border-2 border-success">
-                                    <img width="28" src={{iconUrl}}>
-                                    {{label}}
-                                </li>
-                            {{/each}}
-                        </ul>               
+                                <img width="28" src={{iconUrl}}>
+                                {{label}}
+                            </li>
+                        {{/each}}
+                    </ul>
 
                     <div class="testimonials">
                         <div class="testimonial-item">
@@ -40,11 +40,12 @@
                             {{room.description}}
                         </p>
                     </div>
-
-                    <div class="d-flex justify-content-center">
-                        <a class="mt-3 btn btn-outline-warning text-dark"
-                            href="/facility/{{room._id}}/decorate-room">Decorate Room</a>
-                    </div>
+                    {{#if isOwner}}
+                        <div class="d-flex justify-content-center">
+                            <a class="mt-3 btn btn-outline-warning text-dark"
+                                href="/facility/{{room._id}}/decorate-room">Edit Room Facilities</a>
+                        </div>
+                    {{/if}}
                 </div>
             </div>
 
